[package]
name = "wgpu-sample"
version = "0.1.0"
authors = ["Pooya Eimandar <Pooya.Eimandar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wgpu_sample_desktop"
path = "src/lib.rs"

[dependencies]
wgpu = { version = "25.0.2" }
pollster = "0.4.0"
log = "0.4.27"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"
winit = { version = "0.30.11", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.11" }
wry = "0.52.1"
